--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body{
     background-color:#000;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar{
@@ -36,7 +37,6 @@ body{
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
 }
 
 .library {
@@ -62,7 +62,6 @@ body{
     border: 0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -100,7 +99,6 @@ body{
 .section-playlist__content .text{
     padding-bottom: 14px;
     color:#fff;
-    font-family: "DM Sans", sans-serif;
 }
 .section-playlist__content .title {
     font-weight: 700;
@@ -117,7 +115,6 @@ body{
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -131,7 +128,6 @@ body{
 }
 .sidebar .cookies a{
     color: #b3b3b3;
-    font-family: "DM Sans", sans-serif;
     font-weight: 500;
     font-size: 10px;
     text-decoration: none;
@@ -150,4 +146,42 @@ body{
     padding: 8px;
     border-radius: 20px;
     align-items:center;
+}
+.disclaimer-premium {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, #ae2896, #509bf5);
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
+}
+.disclaimer-premium .text {
+   flex-shrink: 0;
+}
+.disclaimer-premium .disclaimer-premium__title {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.disclaimer-premium .disclaimer-premium__subtitle {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.disclaimer-premium button {
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    flex-shrink: 0;
 }
